--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "pg": "^8.7.1",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-react": "^7.12.7",
-    "axios": "^0.21.0",
-    "babel-loader": "^8.2.2",
-    "nodemon": "^2.0.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "axios": "^0.24.0",
+    "babel-loader": "^8.2.3",
+    "nodemon": "^2.0.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
